--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "netlify-cms-app": "^2.15.63",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
