--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "frontmatter-markdown-loader": "^3.6.3",
     "netlify-cms-app": "^2.15.63",
     "next": "12.0.7",
     "react": "17.0.2",
