--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "cms": "npx netlify-cms-proxy-server",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
