--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -298,18 +298,37 @@ collections:
                 ],
             }
 
+      - file: 'content/settings/paths.md'
+        label: 'Paths'
+        name: paths
+        fields:
+          - {
+              label: Paths,
+              label_singular: Path,
+              name: paths,
+              widget: list,
+              fields:
+                [
+                  { label: Parent, name: parent, widget: relation, collection: pages, search_fields: ['metadata.slug'], value_field: '{{metadata.slug}}', display_fields: ['name'] },
+                  {
+                    label: Children,
+                    label_singular: Child,
+                    name: children,
+                    required: false,
+                    widget: list,
+                    fields: [{ label: Child, name: child, widget: relation, collection: pages, search_fields: ['metadata.slug'], value_field: '{{metadata.slug}}', display_fields: ['name'] }],
+                  },
+                ],
+            }
+
   # Pages
   - name: 'pages'
     label: 'Pages'
     label_singular: 'Page'
     summary: '{{name}}'
-    identifier_field: '{{parent}}__{{metadata.slug}}'
+    identifier_field: metadata.slug
     create: true
     folder: /content/pages
-    nested:
-      depth: 100
-      summary: '{{name}}'
-    meta: { path: { widget: string, label: 'Path', index_file: 'index' } }
     fields:
       # Name
       - { label: 'Name', name: 'name', widget: 'string' }
