got blog working with netlify cms data

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -624,7 +624,8 @@ collections:
   - name: 'posts'
     label: 'Posts'
     label_singular: Post
-    identifier_field: name
+    summary: '{{name}}'
+    identifier_field: metadata.slug
     create: true
     folder: /content/posts
     fields:
@@ -648,7 +649,7 @@ collections:
           collection: 'categories',
           multiple: true,
           search_fields: ['metadata.slug'],
-          value_field: 'metadata.slug',
+          value_field: '{{metadata.title}}__{{metadata.slug}}__{{color}}',
           display_fields: ['name'],
         }
 
@@ -661,7 +662,7 @@ collections:
           multiple: true,
           required: false,
           search_fields: ['metadata.slug'],
-          value_field: 'metadata.slug',
+          value_field: metadata.slug,
           display_fields: ['name'],
         }
 
@@ -706,6 +707,19 @@ collections:
 
       # Color
       - { label: 'Color', name: 'color', widget: 'color' }
+
+      # Featured Posts
+      - {
+          label: 'Featured Posts',
+          name: 'featuredPosts',
+          widget: 'relation',
+          collection: 'posts',
+          multiple: true,
+          required: false,
+          search_fields: ['metadata.slug'],
+          value_field: '{{metadata.title}}__{{metadata.slug}}',
+          display_fields: ['name'],
+        }
 
       # Metadata
       - {
