--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aberrations-website-v2",
+  "name": "aberrations-website",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.11",
     "@babel/core": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@headlessui/react": "^1.4.2",
@@ -19,7 +18,6 @@
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.21.4",
     "frontmatter-markdown-loader": "^3.6.3",
-    "graphql": "^15.5.3",
     "js-cookie": "^3.0.1",
     "netlify-cms-app": "^2.15.63",
     "next": "12.0.7",
