--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "cms": "npx netlify-cms-proxy-server",
+    "dev:cms": "concurrently \"npm run dev\" \"npm run cms\"",
     "noIndex": "next build && echo 'User-agent: *\nDisallow: /' > public/robots.txt",
     "build": "next build",
     "start": "next start",
@@ -34,6 +35,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
