--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.1",
+    "@types/node": "^17.0.16",
+    "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.12"
+    "tailwindcss": "^3.0.12",
+    "typescript": "^4.5.5"
   }
 }
