--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "frontmatter-markdown-loader": "^3.6.3",
     "js-cookie": "^3.0.1",
     "netlify-cms-app": "^2.15.63",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
