--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aberrations-rpg/functions": "^0.0.6",
     "@babel/core": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@headlessui/react": "^1.4.2",
