--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@stripe/stripe-js": "^1.22.0",
+    "@stytch/nextjs": "^2.0.1",
+    "@stytch/vanilla-js": "^0.10.5",
     "axios": "^0.21.4",
     "frontmatter-markdown-loader": "^3.6.3",
     "js-cookie": "^3.0.1",
