set up mongoose and next-connect for api routes

--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.21.4",
     "firebase": "^9.20.0",
+    "firebase-admin": "^11.7.0",
     "frontmatter-markdown-loader": "^3.6.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^7.0.5",
     "netlify-cms-app": "^2.15.63",
     "next": "^12.1.0",
+    "next-connect": "^0.13.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
