--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.16.7",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.21.4",
     "firebase": "^9.20.0",
