--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aberrations-rpg/functions": "^0.0.6",
+    "@aws-amplify/auth": "^5.6.4",
     "@babel/core": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@headlessui/react": "^1.4.2",
